--- a/debian/control
+++ b/debian/control
@@ -1,171 +1,61 @@
-Source: kdelibs4
-Build-Depends: automake, autoconf, libtool, debhelper (>> 3.0.0), flex, bison, gettext, libqt3-dev (>= 2:3.0.1-1), libqt3-mt-dev (>= 2:3.0.1-1), qt3-tools (>= 2:3.0.1-1), libtiff3g-dev | libtiff-dev, libaudiofile-dev, libasound2-dev (>= 0.9.0beta7-1), docbook, libbz2-dev, libpcre3-dev, libcupsys2-dev | cupsys-dev, libxml2-dev (>= 2.4.8), libxslt1-dev (>= 1.0.6), libsasl-dev, nas-dev, libpng2-dev | libpng-dev, libjpeg62-dev (>= 6b-4) | libjpeg-dev, zlib1g-dev | libz-dev, libfreetype6-dev, libfam-dev, pkg-config, libglib1.3-dev, libssl-dev
-Build-Depends-Indep: kdoc, qt3-doc
-Section: libs
+Source: kdelibs
 Priority: optional
-Maintainer: Ivan E. Moore II <rkrusty@debian.org>
+Maintainer: Christopher L Cheney <ccheney@debian.org>
+Build-Depends: debhelper (>> 3.0.0), automake, gettext, libarts1-dev, libasound2-dev, libbz2-dev, libcupsys2-dev, libfam-dev, libpcre3-dev, libqt3-mt-dev, libssl-dev, libtiff3g-dev, libxml2-dev, libxslt1-dev, texinfo, xlibmesa3, xlibs-dev, zlib1g-dev
+Build-Depends-Indep: doxygen
 Standards-Version: 3.5.6
 
-Package: kdelibs4
-Architecture: any
+Package: kdelibs
 Section: libs
+Architecture: all
+Depends: kdelibs4 (= ${Source-Version}), kdelibs4-bin (= ${Source-Version}), kdelibs4-data (= ${Source-Version})
+Description: KDE core libraries metapackage
+ KDE core libraries metapackage.
+
+Package: kdelibs4
+Section: libs
+Architecture: any
+Depends: ${shlibs:Depends}, kdelibs4-data (= ${Source-Version})
 Replaces: kdelibs3
-Depends: ${shlibs:Depends}, kdelibs4-bin
-Suggests: libarts1, libarts-bin, libkmid0, libkmid-bin, aspell | ispell, libssl0.9.6, anti-aliasing-howto, gdb, kdelibs4-cups
-Description: KDE core libraries (runtime files)
+Description: KDE core libraries
  KDE core libraries.
- You need these files to run kde applications.
+ You need these libraries to run kde applications.
 
 Package: kdelibs4-bin
-Architecture: any
 Section: libs
-Replaces: kdelibs3 (<< 4:2.2.2-7), kdelibs3-bin, kdelibs4 (<< 3.0-0.beta1-1)
-Depends: ${shlibs:Depends}, python, xbase-clients
-Conflicts: kdelibs4 (<< 3.0-0.beta1-1), kdelibs3-bin, kdelibs3 (<< 4:2.2.2-7)
+Architecture: any
+Depends: ${shlibs:Depends}
 Provides: kdelibs-bin
+Replaces: kdelibs-bin
 Description: KDE core binaries
  KDE core binaries.
- You need these files to run kde applications.
+ You need these binaries to run kde applications.
 
-Package: kdelibs4-cups
-Architecture: any
+Package: kdelibs4-data
 Section: libs
-Replaces: kdelibs3-cups
-Depends: ${shlibs:Depends}
-Suggests: cupsomatic-ppd
-Conflicts: kdelibs3-cups
-Description: KDE print system (CUPS support)
- This package contains the KDE printer bits which use CUPS. 
-
-Package: libarts1
-Architecture: any
-Section: libs
-Replaces: libarts1-alsa, libarts, libarts-alsa
-Depends: ${shlibs:Depends}
-Recommends: libarts-bin
-Suggests: kdelibs4, artsbuilder3
-Conflicts: suidmanager (<< 0.50), libarts1-alsa
-Description: aRts Sound system
- aRts is a short form for "analog realtime synthesizer". The idea of the whole
- thing is to create/process sound using small modules which do certain tasks.
- These may be create a waveform (oscillators), play samples, filter data, add
- signals, perform effects like delay/flanger/chorus, or output the data to
- the soundcard.
- .
- aRts is the core sound system for KDE (and other systems)
-
-Package: libkmid0
-Architecture: any
-Section: libs
-Replaces: libkmid0-alsa, libkmid, libkmid-alsa
-Depends: ${shlibs:Depends}
-Recommends: libkmid-bin
-Conflicts: libkmid0-alsa
-Description: aRts Sound system (midi/kmedia support libraries)
- aRts is a short form for "analog realtime synthesizer". The idea of the whole
- thing is to create/process sound using small modules which do certain tasks.
- These may be create a waveform (oscillators), play samples, filter data, add
- signals, perform effects like delay/flanger/chorus, or output the data to
- the soundcard.
- .
- This package contains the midi and kmedia support files for aRts as well as 
- knotify
-
-Package: libkmid0-alsa
-Architecture: any
-Section: libs
-Priority: extra
-Replaces: libkmid0, libkmid, libkmid-alsa
-Depends: ${shlibs:Depends}
-Recommends: libkmid-bin
-Conflicts: libkmid0
-Description: aRts Sound system (midi/kmedia support libraries with alsa)
- aRts is a short form for "analog realtime synthesizer". The idea of the whole
- thing is to create/process sound using small modules which do certain tasks.
- These may be create a waveform (oscillators), play samples, filter data, add
- signals, perform effects like delay/flanger/chorus, or output the data to
- the soundcard.
- .
- This package contains the midi and kmedia support files for aRts as well as 
- knotify
-
-Package: libarts1-alsa
-Architecture: any
-Section: libs
-Priority: extra
-Replaces: libarts1, libarts, libarts-alsa
-Depends: ${shlibs:Depends}
-Suggests: kdelibs4, artsbuilder3
-Recommends: libarts-bin
-Conflicts: suidmanager (<< 0.50), libarts1
-Description: aRts Sound system (built with alsa support)
- aRts is a short form for "analog realtime synthesizer". The idea of the whole
- thing is to create/process sound using small modules which do certain tasks.
- These may be create a waveform (oscillators), play samples, filter data, add
- signals, perform effects like delay/flanger/chorus, or output the data to
- the soundcard.
- .
- aRts is the core sound system for KDE (and other systems)
-
-Package: libarts1-dev
-Architecture: any
-Section: devel
-Replaces: libarts-dev, libarts-bin, libarts, libarts-alsa, libarts1 (<< 3.0-0.beta1-1), libarts1-alsa (<< 3.0-0.beta1-1)
-Depends: libarts1 (= ${Source-Version}) | libarts1-alsa (= ${Source-Version}), libarts-bin (= ${Source-Version}), libc6-dev, libaudiofile-dev
-Suggests: kdelibs4-dev, libasound2-dev
-Conflicts: libarts-dev
-Description: aRts Sound system (development files)
- aRts sound system.
- .
- Header files needed to build apps that use the aRts sound daemon
-
-Package: libarts-bin
-Architecture: any
-Section: devel
-Replaces: libarts, libarts-alsa
-Depends: ${shlibs:Depends}
-Conflicts: libarts, libarts-alsa
-Description: aRts Sound system (binaries)
- aRts sound system.
-
-Package: libkmid-bin
-Architecture: any
-Section: devel
-Replaces: libkmid, libkmid-alsa
-Depends: ${shlibs:Depends}
-Conflicts: libkmid, libkmid-alsa
-Description: aRts Sound system (kde/midi binaries)
- aRts sound system. 
-
-Package: libkmid0-dev
-Architecture: any
-Section: devel
-Replaces: libkmid0 (<< 3.0-0.beta1-1), libkmid0-alsa (<< 3.0-0.beta1-1)
-Depends: libkmid0 (= ${Source-Version}) | libkmid0-alsa (= ${Source-Version}) , libkmid-bin (= ${Source-Version}), kdelibs4-dev
-Description: aRts Sound system (midi development files)
- aRts sound system.
- .
- Header files needed to build apps that use the aRts sound daemon and the
- midi specific portions of it.
-
-Package: kdelibs4-doc
 Architecture: all
-Section: doc
-Replaces: kdelibs-doc
-Suggests: kdelibs4-dev, libqt3-dev, libqt3-mt-dev, kdoc
-Provides: kdelibs-doc
-Description: KDE core library documentation
- These are the core documentation created by the kdoc package.  This package
- is needed for developing KDE related packages.
+Depends: kdelibs4 (= ${Source-Version})
+Provides: kdelibs-data
+Replaces: kdelibs-data
+Description: KDE core shared data
+ KDE core shared data
+ You need these data files to run kde applications.
 
 Package: kdelibs4-dev
-Architecture: any
 Section: devel
-Replaces: kdelibs-dev, kdelibs4 (<< 3.0-0.beta1-1), kdelibs3 (<< 4:2.2.2-9)
-Depends: kdelibs4 (= ${Source-Version}), libarts1-dev (= ${Source-Version}), libkmid0-dev (= ${Source-Version}), libqt3-dev (>= 2:3.0.1-1), libqt3-mt-dev (>= 2:3.0.1-1), qt3-tools (>= 2:3.0.1-1), libaudiofile-dev, gettext, libtiff3g-dev | libtiff-dev, docbook, libpcre3-dev, libjpeg62-dev (>= 6b-4) | libjpeg-dev, libfam-dev, libbz2-dev
-Recommends: libarts-bin (= ${Source-Version}), libkmid-bin (= ${Source-Version}), kdelibs4-cups (= ${Source-Version})
-Conflicts: kdelibs-dev, kdelibs3 (<< 4:2.2.2-9)
-Suggests: kdelibs4-doc, kdoc, libxml2-dev, libxslt1-dev
+Architecture: all
+Depends: kdelibs4 (= ${Source-Version}), libc6-dev
+Provides: kdelibs-dev
+Replaces: kdelibs-dev
 Description: KDE core libraries (development files)
  KDE core libraries.
- You need these files to compile kde applications.
+ You need these include files to compile kde applications.
+
+Package: kdelibs4-doc
+Section: doc
+Architecture: all
+Provides: kdelibs-doc
+Replaces: kdelibs-doc
+Description: KDE core library documentation
+ KDE core library documentation.
+ You need this documentation to develop KDE applications.
