--- a/debian/rules
+++ b/debian/rules
@@ -1,24 +1,33 @@
 #!/usr/bin/make -f
-# Made with the aid of debmake, by Christoph Lameter,
-# based on the sample debian/rules file for GNU hello by Ian Jackson.
+# Sample debian/rules that uses debhelper.
+# GNU copyright 1997 to 1999 by Joey Hess.
+
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
- 
-# This is the debhelper compatability version to use.
+
+# This is the debhelper compatibility version to use.
 export DH_COMPAT=3
 
-SHELL=/bin/sh
-BUILDDIR = $(shell pwd)
-QTDOCDIR  = usr/share/doc/qt-doc/doc/html
-KDEDOCDIR = usr/share/doc/kdelibs4-doc/html
-export KDB2HTML_UNINSTALLED=$(BUILDDIR)/ksgmltools/customization/
-ARCH = $(shell dpkg-architecture -qDEB_BUILD_ARCH)
-ifeq ($(ARCH),alpha)
-  export CFLAGS=-O0 -mieee
-  export CXXFLAGS=-O0 -mieee
+# These are used for cross-compiling and for saving the configure script
+# from having to guess our platform (since we know it already)
+DEB_HOST_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
+DEB_BUILD_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+
+objdir = $(CURDIR)/obj-$(DEB_BUILD_GNU_TYPE)
+
+ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
+	CFLAGS += -g
+endif
+ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
+	INSTALL_PROGRAM += -s
 endif
 
-ifeq ($(ARCH),i386)
+ifeq ($(DEB_BUILD_GNU_TYPE),alpha-linux)
+  export CFLAGS +=-O0 -mieee
+  export CXXFLAGS +=-O0 -mieee
+endif
+
+ifeq ($(DEB_BUILD_GNU_TYPE),i386-linux)
   # Uncomment the following 2 lines to enable i686 optimziation
   # You may want to tweak the settings to your likings
   #export CFLAGS=-O3 -march=i686 -ffast-math -finline-functions
@@ -26,154 +35,169 @@ ifeq ($(ARCH),i386)
   XINERAMA=--with-xinerama
 endif
 
-tmp = $(shell pwd)/debian/build-tmp
-alsa-tmp = $(shell pwd)/debian/alsa-tmp
-
-build: build-stamp alsa-stamp
+version=`head -1 debian/changelog | sed -e "s#.*(\([^)]*\)).*#Debian Package \1#"` ;
 
 -include debian/debiandirs
 
 debian/debiandirs: admin/debianrules
 	perl -w admin/debianrules echodirs > debian/debiandirs
 
-build-stamp:
+configure: configure-stamp
+configure-stamp:
 	dh_testdir
-	if test ! -f configure; then \
-	  make -f admin/Makefile.common ;\
-	fi
-	-chmod 755 configure
-	version=`head -1 debian/changelog | sed -e "s#.*(\([^)]*\)).*#Debian Package \1#"` ;\
-	./configure $(configkde) --with-distribution="$$version (`cat /etc/debian_version`)" \
-	--disable-cups --without-alsa $(XINERAMA)
 
-	make
-	make DESTDIR=`pwd`/debian/install-tmp/ install
+	# Apply Debian specific patches
+	if test ! -f patch-stamp; then \
+		for patch in $(CURDIR)/debian/patches/*.diff ;\
+		do \
+			echo APPLYING PATCH\: ${patch##*/};\
+			patch -p1 < $$patch ;\
+		done ;\
+		touch patch-stamp ;\
+	fi
+
+	# KDE CVS does not have aclocal.m4 or configure
+	if test ! -f configure; then \
+		$(MAKE) -f admin/Makefile.common ;\
+	fi
+
+	# make build directory
+	mkdir $(objdir)
+
+	# run configure with build tree $(objdir)
+	cd $(objdir) && \
+	../configure $(configkde) --x-includes=/usr/X11R6/include \
+	--with-distribution="$$version (`cat /etc/debian_version`)" \
+	--enable-mitshm --with-alsa --with-ipv6-lookup=yes \
+	--enable-fast-malloc=full $(XINERAMA)
+
+	touch configure-stamp
+
+build: build-stamp
+build-stamp: configure-stamp 
+	dh_testdir
+
+	cd $(objdir) && \
+	$(MAKE)
+
+	# create documentation for kdelibs4
+	echo Building API Documentation
+	doxygen Doxyfile
 
 	touch build-stamp
 
-alsa-stamp:
-	dh_testdir
-	-make -C arts/ clean
-	-rm -f `find arts -name "*.mcoptype"`
-	-make -C libkmid/ clean
-	-make -C kdeprint/cups clean
-	./configure $(configkde) --with-alsa --enable-cups $(XINERAMA)
-	make -C libkmid/ 
-	make -C arts/ 
-	make -C kdeprint/cups 
-	touch alsa-stamp
-
-
 debian-clean:
 	dh_testdir
-	-rm -f build-stamp alsa-stamp indep-stamp
+	dh_testroot
+
 	dh_clean
 
 clean: debian-clean
-	-rm -rf debian/debiandirs debian/build-tmp \
-		debian/install-tmp debian/alsa-tmp
-	if test -d CVS; then \
-	  make -f admin/Makefile.common cvs-clean ;\
-	fi
-	-make distclean
-
-binary-indep:	build-stamp alsa-stamp indep-stamp
-indep-stamp:
 	dh_testdir
 	dh_testroot
-	dh_clean -i
-	-if test -f /usr/bin/qt2kdoc; then \
-		(mkdir -p debian/kdelibs4-doc/$(KDEDOCDIR)/kdoc-reference) ; \
-		qt2kdoc --url=/$(QTDOCDIR) \
-		--outdir=`pwd`/debian/kdelibs4-doc/$(KDEDOCDIR)/kdoc-reference \
-		--compress \
-		/$(QTDOCDIR) ; \
-		makekdedoc --libdir=`pwd`/debian/kdelibs4-doc/$(KDEDOCDIR)/kdoc-reference \
-		--kdocopt='--skip-internal --compress' \
-		--url=/$(KDEDOCDIR) \
-		--outputdir=`pwd`/debian/kdelibs4-doc/$(KDEDOCDIR) ; \
+	rm -f build-stamp configure-stamp \
+		 debian/debiandirs debian/system.kdeglobals
+
+	# Remove Debian specific patches
+	if test -f patch-stamp; then \
+		for patch in $(CURDIR)/debian/patches/*.diff ;\
+		do \
+			echo REMOVING PATCH\: ${patch##*/};\
+			patch -p1 -R < $$patch ;\
+		done ;\
+		rm -f patch-stamp ;\
 	fi
-	
-	mkdir -p `pwd`/debian/kdelibs4-doc/$(KDEDOCDIR)/kio
-	cp kio/DESKTOP_ENTRY_STANDARD `pwd`/debian/kdelibs4-doc/$(KDEDOCDIR)/kio
-	dh_installdocs -i
-	dh_installchangelogs -pkdelibs4-doc 
-	dh_compress -i -X.docbook -X.css -X-license -X.dcl -X.bz2
-	dh_fixperms -i
-	dh_installdeb -i
-	dh_gencontrol -i
-	dh_md5sums -i
-	dh_builddeb -i
-	touch indep-stamp
+
+	# Remove build tree
+	rm -rf $(objdir)
+
+	# Remove api docs tree
+	rm -rf apidocs
+
+	# if Makefile exists run distclean
+	if test -f Makefile; then \
+		$(MAKE) distclean; \
+	fi
+
+	#if test -d CVS; then \
+		$(MAKE) -f admin/Makefile.common cvs-clean ;\
+	fi
+
+	dh_clean
 
 install: build
 	dh_testdir
 	dh_testroot
-	dh_clean -a
-	-rm -rf debian/alsa-tmp debian/kdelibs4 debian/build-tmp
-	-install -d debian/kdelibs4
-	cd debian/install-tmp && find ./ | cpio -pmd $(tmp)/
-	dh_installdirs -a
-	make -C libkmid/ DESTDIR=$(alsa-tmp)/ install
-	make -C arts/ DESTDIR=$(alsa-tmp)/ install
-	make -C kdeprint/cups DESTDIR=`pwd`/debian/build-tmp/ install
+	dh_clean -k
+	dh_installdirs
 
-binary-arch:  build install
+	cd $(objdir) && \
+	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
+
+	# install dh-make template and debianrules
+	install -d debian/tmp/usr/share/doc/kdelibs4-dev/dh-make
+	install -p debian/dh-make/* \
+		debian/tmp/usr/share/doc/kdelibs4-dev/dh-make
+	install -p admin/debianrules \
+		debian/tmp/usr/share/doc/kdelibs4-dev/dh-make
+	rm -f debian/tmp/usr/share/doc/kdelibs4-dev/dh-make/CVS
+
+	# install kdelibs api docs
+	install -d debian/tmp/usr/share/doc/kdelibs4-doc/html
+	install -p apidocs/html/* \
+		debian/tmp/usr/share/doc/kdelibs4-doc/html
+
+	# create system.kdeglobals
+	perl -w admin/debianrules echoglobals > debian/system.kdeglobals
+	install -p debian/system.kdeglobals debian/tmp/$(kde_confdir)
+
+	# make proxytype.pl and useragent.pl executable
+	-chmod 755 debian/tmp/$(kde_datadir)/kconf_update/useragent.pl \
+		debian/tmp/$(kde_datadir)/kconf_update/proxytype.pl
+
+	# symlinks must be relative
+	find debian/tmp -name common -type l \
+		-exec echo REMOVING SYMLINK\: \{\} \; \
+		-exec rm \{\} \;
+
+# Build architecture-independent files here.
+binary-indep: build install
 	dh_testdir
 	dh_testroot
-	dh_installdirs -a
-	-rm -f debian/build-tmp/usr/share/doc/kde/HTML/default
-	debianrc=debian/build-tmp/etc/kde/system.kdeglobals ;\
-	echo "[Directories]" > $$debianrc ;\
-	echo "dir_config=/etc/kde" >> $$debianrc ;\
-	echo "dir_html=/usr/share/doc/kde/HTML" >> $$debianrc ;\
-	echo "dir_cgi=/usr/lib/cgi-bin" >> $$debianrc ;\
-	echo "dir_apps=/usr/share/kde/applnk" >> $$debianrc ;\
-	echo "dir_mime=/usr/share/kde/mimelnk" >> $$debianrc ;\
-	echo "dir_services=/usr/share/kde/services" >> $$debianrc ;\
-	echo "dir_servicetypes=/usr/share/kde/servicetypes" >> $$debianrc ;\
-	echo "[General]" >> $$debianrc ;\
-	echo "TerminalApplication=x-terminal-emulator" >> $$debianrc
-	cp debian/kde.pamd debian/kdelibs4/etc/pam.d/kde
+	dh_movefiles -i
+
+	dh_installdocs -i
+	dh_installpam -i
+	dh_installchangelogs -i 
+	dh_link -i
+	dh_compress -i -X.docbook -X.css -X-license -X.dcl -X.bz2
+	dh_fixperms -i
+	dh_installdeb -i
+	dh_perl -i
+	dh_gencontrol -i
+	dh_md5sums -i
+	dh_builddeb -i
+
+# Build architecture-dependent files here.
+binary-arch: build install
+	dh_testdir
+	dh_testroot
+	dh_movefiles -a
+
 	dh_installdocs -a
-	-cp debian/dh-make/* debian/kdelibs4-dev/usr/share/doc/kdelibs4-dev/dh-make/
-	-cp admin/debianrules debian/kdelibs4-dev/usr/share/doc/kdelibs4-dev/dh-make/
-	dh_undocumented
-	dh_installman -a
-	dh_installmenu -a
-	dh_installdebconf -a
-	# musical chairs
-	dh_movefiles -plibarts1 --sourcedir=debian/build-tmp
-	dh_movefiles -plibarts-bin --sourcedir=debian/build-tmp
-	dh_movefiles -plibkmid-bin --sourcedir=debian/build-tmp
-	dh_movefiles -plibarts1-dev --sourcedir=debian/build-tmp
-	dh_movefiles -plibkmid0 --sourcedir=debian/build-tmp
-	dh_movefiles -plibkmid0-dev --sourcedir=debian/build-tmp
-	dh_movefiles -pkdelibs4-dev --sourcedir=debian/build-tmp
-	dh_movefiles -pkdelibs4-cups --sourcedir=debian/build-tmp
-	dh_movefiles -plibarts1-alsa --sourcedir=debian/alsa-tmp
-	dh_movefiles -plibkmid0-alsa --sourcedir=debian/alsa-tmp
-	dh_movefiles -pkdelibs4 --sourcedir=debian/build-tmp
-	dh_movefiles -pkdelibs4-bin --sourcedir=debian/build-tmp
-	dh_installchangelogs -a 
-	dh_strip -a
-	dh_perl -a
+	dh_undocumented -a
+	dh_installchangelogs -a
 	dh_link -a
+	dh_strip -a
 	dh_compress -a -X.docbook -X.css -X-license -X.dcl -X.bz2
 	dh_fixperms -a
-	dh_makeshlibs -V
+	dh_makeshlibs -a
 	dh_installdeb -a
-	dh_shlibdeps -a -l`pwd`/debian/kdelibs4/usr/lib/kde:`pwd`/debian/kdelibs4/usr/lib/kde3:`pwd`/debian/libarts1/usr/lib/kde:`pwd`/debian/libarts1/usr/lib/kde3:`pwd`/debian/libkmid0/usr/lib/kde:`pwd`/debian/libkmid0/usr/lib/kde3:`pwd`/debian/kdelibs4-cups/usr/lib/kde
-	echo -n `cat debian/libarts1.substvars ` > debian/libarts1-alsa.substvars
-	echo ", libasound2 (>= 0.9.0beta7-1)" >> debian/libarts1-alsa.substvars
-	echo -n `cat debian/libkmid0.substvars` > debian/libkmid0-alsa.substvars
-	echo ", libasound2 (>= 0.9.0beta7-1)" >> debian/libkmid0-alsa.substvars
-	dh_gencontrol 
-	dh_md5sums 
+	dh_perl -a
+	dh_shlibdeps -a -ldebian/kdelibs4/usr/lib:debian/kdelibs4-bin/usr/lib
+	dh_gencontrol -a
+	dh_md5sums -a
 	dh_builddeb -a
 
-# Below here is fairly generic really
-
-binary:		binary-indep binary-arch
-
-.PHONY: binary binary-arch clean
+binary: binary-indep binary-arch
+.PHONY: build clean binary-indep binary-arch binary install configure
