--- a/kio/kio/configure.in.in
+++ b/kio/kio/configure.in.in
@@ -43,21 +43,25 @@ dnl ------------------------------------------------------------------------
 dnl Try to find if we have Linux Dir Notification
 dnl ------------------------------------------------------------------------
 
+AC_ARG_ENABLE(dnotify, [  --enable-dnotify        enable use of Linux directory notifications],
+[ kde_enable_dnotify=$enableval ], [])dnl
+
 AC_CHECK_GNU_EXTENSIONS
 
-AC_MSG_CHECKING([for Linux Directory Notification])
-AC_CACHE_VAL(kde_cv_have_dnotify,
-[
-kde_cv_have_dnotify=no
-AC_LANG_SAVE
-AC_LANG_CPLUSPLUS
+if test "x$kde_enable_dnotify" = "xyes"; then
+  AC_MSG_CHECKING([for Linux Directory Notification])
+  AC_CACHE_VAL(kde_cv_have_dnotify,
+  [
+  kde_cv_have_dnotify=no
+  AC_LANG_SAVE
+  AC_LANG_C
 
-AC_TRY_COMPILE(
-[
+  AC_TRY_COMPILE(
+  [
 #include <fcntl.h>
 #include <signal.h>
-],
-[
+  ],
+  [
 #ifndef F_NOTIFY
 #error no dir notification
 #endif
@@ -67,14 +71,15 @@ AC_TRY_COMPILE(
     fcntl(fd, F_SETSIG, SIGRTMIN);
     fcntl(fd, F_NOTIFY, DN_DELETE|DN_CREATE|DN_MULTISHOT);
 
-],kde_cv_have_dnotify=yes)
+  ],kde_cv_have_dnotify=yes)
 
-AC_LANG_RESTORE
-])
+  AC_LANG_RESTORE
+  ])
 
-if test "$kde_cv_have_dnotify" = "yes" ; then
-  AC_DEFINE_UNQUOTED(HAVE_DNOTIFY, 1, [Define if your system has Linux Directory Notification])
-  AC_MSG_RESULT(yes)
-else
-  AC_MSG_RESULT(no)
+  if test "$kde_cv_have_dnotify" = "yes" ; then
+    AC_DEFINE_UNQUOTED(HAVE_DNOTIFY, 1, [Define if your system has Linux Directory Notification])
+    AC_MSG_RESULT(yes)
+  else
+    AC_MSG_RESULT(no)
+  fi
 fi
