--- a/debian/dh-make/rules
+++ b/debian/dh-make/rules
@@ -5,43 +5,47 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# This is the debhelper compatability version to use.
+# This is the debhelper compatibility version to use.
 export DH_COMPAT=3
-ARCH = $(shell dpkg-architecture -qDEB_BUILD_ARCH)
-ifeq ($(ARCH),alpha)
-  export CFLAGS=-O0 -mieee
-  export CXXFLAGS=-O0 -mieee
+
+# These are used for cross-compiling and for saving the configure script
+# from having to guess our platform (since we know it already)
+DEB_HOST_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
+DEB_BUILD_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+
+objdir = $(CURDIR)/obj-$(DEB_BUILD_GNU_TYPE)
+
+ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
+	CFLAGS += -g
+endif
+ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
+	INSTALL_PROGRAM += -s
 endif
 
-ifeq ($(ARCH),i386)
-  # Uncomment the following 2 lines to enable i686 optimziation
-  # You may want to tweak the settings to your likings
-  #export CFLAGS=-O3 -march=i686 -ffast-math -finline-functions
-  #export CXXFLAGS=-O3 -march=i686 -ffast-math -finline-functions
-  XINERAMA=--with-xinerama
+ifeq ($(DEB_BUILD_GNU_TYPE),alpha-linux)
+  export CFLAGS +=-O0 -mieee
+  export CXXFLAGS +=-O0 -mieee
 endif
-
-configure: configure-stamp
 
 -include debian/debiandirs
- 
+
 debian/debiandirs: debian/debianrules
 	perl -w debian/debianrules echodirs > debian/debiandirs
 
+configure: configure-stamp
 configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
-	#CONFIGURE# $(XINERAMA)
+	#CONFIGURE#
 
 	touch configure-stamp
 
-build: configure-stamp build-stamp
-build-stamp:
+build: build-stamp
+build-stamp: configure-stamp 
 	dh_testdir
 
 	# Add here commands to compile the package.
 	$(MAKE)
-	#/usr/bin/docbook-to-man debian/#PACKAGE#.sgml > #PACKAGE#.1
 
 	touch build-stamp
 
@@ -61,7 +65,7 @@ install: build
 	dh_clean -k
 	dh_installdirs
 
-	# Add here commands to install the package into debian/#PACKAGE#.
+	# Add here commands to install the package into debian/tmp
 	#INSTALL#
 
 
@@ -73,6 +77,8 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir
 	dh_testroot
+	dh_movefiles
+
 #	dh_installdebconf	
 	dh_installdocs
 	dh_installexamples
@@ -91,7 +97,7 @@ binary-arch: build install
 	dh_strip
 	dh_compress -X.docbook -X.css -X-license -X.dcl -X.bz2
 	dh_fixperms
-#	dh_makeshlibs
+	dh_makeshlibs
 	dh_installdeb
 #	dh_perl
 	dh_shlibdeps
